Updates pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,8 @@
 ---
 repos:
-  - repo: https://github.com/geek-kb/python_docs_hook
-    rev: v0.1.0 # Use the latest version you published
+  - repo: https://github.com/yourusername/python_copilot_docs_hook
+    rev: v0.1.0
     hooks:
-      - id: python-docs
-        args:
-          - "--doc-paths"
-          - "Scripts/simple_py_scripts"
+      - id: python-copilot-docs
         verbose: true
-        types: [python] # Only run on Python files
-        stages: [commit] # Run during commit stage
-        additional_dependencies: []
+        types: [python]
