--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,9 @@
 ---
 repos:
-  - repo: https://github.com/yourusername/python_copilot_docs_hook
-    rev: v0.1.0
+  - repo: https://github.com/geek-kb/python_copilot_docs_hook
+    rev: v0.1.11
     hooks:
       - id: python-copilot-docs
-        verbose: true
         types: [python]
+        additional_dependencies: ["openai>=1.0.0"]
+        language: python
