--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,8 @@
 ---
 repos:
   - repo: https://github.com/geek-kb/python_copilot_docs_hook
-    rev: v0.1.21
+    rev: v0.1.22
     hooks:
       - id: python-copilot-docs
         additional_dependencies: ["openai>=1.0.0"]
+        args: ["--openai-key", "${OPENAI_API_KEY}"]
